[gd_scene load_steps=16 format=3 uid="uid://bww5tsqr8lg2i"]

[ext_resource type="Texture2D" uid="uid://b53udvlsxsbkc" path="res://sprites/ui/Achievements window.png" id="1_ad3a0"]
[ext_resource type="Script" uid="uid://kes62y2fdaq7" path="res://scenes/ui/options.gd" id="1_lr2b1"]
[ext_resource type="FontFile" uid="uid://c7eg3ms3bo8qv" path="res://sprites/ui/UncialAntiqua-Regular.ttf" id="3_pykmj"]
[ext_resource type="Texture2D" uid="uid://dphc21aqf5r1m" path="res://sprites/ui/Button_neutral.png" id="4_gdfy8"]
[ext_resource type="Texture2D" uid="uid://bpvowenbyhjyy" path="res://sprites/ui/Button_pressed.png" id="5_b0jeg"]
[ext_resource type="Texture2D" uid="uid://cvilxq7eyc1kj" path="res://sprites/ui/Button_highlight.png" id="6_epl0h"]
[ext_resource type="FontFile" uid="uid://bg81f0wdusbdp" path="res://sprites/ui/Warsuck.otf" id="7_gdfy8"]
[ext_resource type="AudioStream" uid="uid://bgaj7l2ut0y5e" path="res://sfx/menu/menu_click.ogg" id="8_b0jeg"]

[sub_resource type="FontVariation" id="FontVariation_pykmj"]
base_font = ExtResource("3_pykmj")

[sub_resource type="FontVariation" id="FontVariation_gdfy8"]
base_font = ExtResource("3_pykmj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_shnbx"]
texture = ExtResource("4_gdfy8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h7yhf"]
texture = ExtResource("5_b0jeg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ghja5"]
texture = ExtResource("4_gdfy8")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_pykmj"]
color = Color(0.28485027, 0.28485027, 0.28485027, 1)
thickness = 4

[sub_resource type="FontVariation" id="FontVariation_b0jeg"]
base_font = ExtResource("7_gdfy8")

[node name="Options" type="Node2D"]
script = ExtResource("1_lr2b1")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = -0.156
anchor_top = -0.147
anchor_right = -0.156
anchor_bottom = -0.147
offset_left = -278.0
offset_top = -315.0
offset_right = 1893.0
offset_bottom = 1210.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -51.999996
offset_top = -32.999996
offset_right = 2818.588
offset_bottom = 1625.8232
scale = Vector2(0.595, 0.595)
texture = ExtResource("1_ad3a0")

[node name="Label7" type="Label" parent="."]
offset_left = 146.0
offset_top = 572.0
offset_right = 276.0
offset_bottom = 619.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 34
text = "AUDIO"

[node name="Label2" type="Label" parent="."]
offset_left = 136.0
offset_top = 107.0
offset_right = 407.0
offset_bottom = 177.0
theme_override_fonts/font = SubResource("FontVariation_gdfy8")
theme_override_font_sizes/font_size = 34
text = "CONTROLS"

[node name="SAVE" type="Button" parent="."]
z_index = 110
offset_left = 676.0
offset_top = 762.0
offset_right = 922.0
offset_bottom = 809.0
theme_override_fonts/font = ExtResource("3_pykmj")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxTexture_shnbx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_h7yhf")
theme_override_styles/hover = SubResource("StyleBoxTexture_ghja5")
text = "SAVE"

[node name="Highlight" type="TextureRect" parent="SAVE"]
visible = false
z_index = 110
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 905.624
offset_bottom = 204.0
scale = Vector2(0.275, 0.25)
texture = ExtResource("6_epl0h")

[node name="ButtonBackToMenu" type="Button" parent="."]
z_index = 110
offset_left = 1224.0
offset_top = 762.0
offset_right = 1470.0
offset_bottom = 809.0
theme_override_fonts/font = ExtResource("3_pykmj")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxTexture_shnbx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_h7yhf")
theme_override_styles/hover = SubResource("StyleBoxTexture_ghja5")
text = "BACK"

[node name="Highlight" type="TextureRect" parent="ButtonBackToMenu"]
visible = false
z_index = 110
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 905.624
offset_bottom = 204.0
scale = Vector2(0.275, 0.25)
texture = ExtResource("6_epl0h")

[node name="ButtonBackToMenu2" type="Button" parent="."]
z_index = 110
offset_left = 949.0
offset_top = 762.0
offset_right = 1195.0
offset_bottom = 809.0
theme_override_fonts/font = ExtResource("3_pykmj")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxTexture_shnbx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_h7yhf")
theme_override_styles/hover = SubResource("StyleBoxTexture_ghja5")
text = "CANCEL"

[node name="Highlight" type="TextureRect" parent="ButtonBackToMenu2"]
visible = false
z_index = 110
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 905.624
offset_bottom = 204.0
scale = Vector2(0.275, 0.25)
texture = ExtResource("6_epl0h")

[node name="Label" type="Label" parent="."]
offset_left = 618.0
offset_top = 205.99998
offset_right = 748.0
offset_bottom = 252.99998
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "SKILL 1"

[node name="Label3" type="Label" parent="."]
offset_left = 618.0
offset_top = 372.0
offset_right = 757.0
offset_bottom = 419.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "SKILL 3"

[node name="Label4" type="Label" parent="."]
offset_left = 618.0
offset_top = 288.0
offset_right = 756.0
offset_bottom = 335.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "SKILL 2"

[node name="Label5" type="Label" parent="."]
offset_left = 618.0
offset_top = 456.0
offset_right = 755.0
offset_bottom = 503.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "SKILL 4"

[node name="Label6" type="Label" parent="."]
offset_left = 176.0
offset_top = 456.0
offset_right = 306.0
offset_bottom = 503.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "RIGHT"

[node name="Label8" type="Label" parent="."]
offset_left = 176.0
offset_top = 372.0
offset_right = 306.0
offset_bottom = 419.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "LEFT"

[node name="Label9" type="Label" parent="."]
offset_left = 176.0
offset_top = 288.0
offset_right = 306.0
offset_bottom = 335.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "DOWN"

[node name="Label10" type="Label" parent="."]
offset_left = 176.0
offset_top = 205.99998
offset_right = 306.0
offset_bottom = 252.99998
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "UP"

[node name="Label11" type="Label" parent="."]
offset_left = 1056.0
offset_top = 288.0
offset_right = 1186.0
offset_bottom = 335.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "STOP"

[node name="Label12" type="Label" parent="."]
offset_left = 1056.0
offset_top = 372.0
offset_right = 1186.0
offset_bottom = 419.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "HOLD"

[node name="Label13" type="Label" parent="."]
offset_left = 1056.0
offset_top = 205.99998
offset_right = 1187.0
offset_bottom = 252.99998
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "ATTACK"

[node name="Label14" type="Label" parent="."]
offset_left = 1056.0
offset_top = 456.0
offset_right = 1186.0
offset_bottom = 503.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "MOVE"

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 310.0
offset_top = 196.0
offset_right = 1140.0
offset_bottom = 402.0
scale = Vector2(0.07, 0.31)
texture_normal = ExtResource("4_gdfy8")

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 1237.0
offset_top = 439.0
offset_right = 2067.0
offset_bottom = 645.0
scale = Vector2(0.07, 0.31)
texture_normal = ExtResource("4_gdfy8")

[node name="TextureButton3" type="TextureButton" parent="."]
offset_left = 1237.0
offset_top = 357.0
offset_right = 2067.0
offset_bottom = 563.0
scale = Vector2(0.07, 0.31)
texture_normal = ExtResource("4_gdfy8")

[node name="TextureButton4" type="TextureButton" parent="."]
offset_left = 1237.0
offset_top = 276.0
offset_right = 2067.0
offset_bottom = 482.0
scale = Vector2(0.07, 0.31)
texture_normal = ExtResource("4_gdfy8")

[node name="TextureButton5" type="TextureButton" parent="."]
offset_left = 1237.0
offset_top = 196.0
offset_right = 2067.0
offset_bottom = 402.0
scale = Vector2(0.07, 0.31)
texture_normal = ExtResource("4_gdfy8")

[node name="TextureButton6" type="TextureButton" parent="."]
offset_left = 779.0
offset_top = 439.0
offset_right = 1609.0
offset_bottom = 645.0
scale = Vector2(0.07, 0.31)
texture_normal = ExtResource("4_gdfy8")

[node name="TextureButton7" type="TextureButton" parent="."]
offset_left = 779.0
offset_top = 357.0
offset_right = 1609.0
offset_bottom = 563.0
scale = Vector2(0.07, 0.31)
texture_normal = ExtResource("4_gdfy8")

[node name="TextureButton8" type="TextureButton" parent="."]
offset_left = 779.0
offset_top = 276.0
offset_right = 1609.0
offset_bottom = 482.0
scale = Vector2(0.07, 0.31)
texture_normal = ExtResource("4_gdfy8")

[node name="TextureButton9" type="TextureButton" parent="."]
offset_left = 779.0
offset_top = 196.0
offset_right = 1609.0
offset_bottom = 402.0
scale = Vector2(0.07, 0.31)
texture_normal = ExtResource("4_gdfy8")

[node name="TextureButton10" type="TextureButton" parent="."]
offset_left = 310.0
offset_top = 439.0
offset_right = 1140.0
offset_bottom = 645.0
scale = Vector2(0.07, 0.31)
texture_normal = ExtResource("4_gdfy8")

[node name="TextureButton11" type="TextureButton" parent="."]
offset_left = 310.0
offset_top = 357.0
offset_right = 1140.0
offset_bottom = 563.0
scale = Vector2(0.07, 0.31)
texture_normal = ExtResource("4_gdfy8")

[node name="TextureButton12" type="TextureButton" parent="."]
offset_left = 310.0
offset_top = 276.0
offset_right = 1140.0
offset_bottom = 482.0
scale = Vector2(0.07, 0.31)
texture_normal = ExtResource("4_gdfy8")

[node name="Label15" type="Label" parent="."]
offset_left = 1242.0
offset_top = 461.0
offset_right = 1372.0
offset_bottom = 508.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 17
text = "RMB"

[node name="Label16" type="Label" parent="."]
offset_left = 1253.0
offset_top = 372.0
offset_right = 1383.0
offset_bottom = 419.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "C"

[node name="Label17" type="Label" parent="."]
offset_left = 1254.0
offset_top = 290.0
offset_right = 1384.0
offset_bottom = 337.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "X"

[node name="Label18" type="Label" parent="."]
offset_left = 1254.0
offset_top = 209.99998
offset_right = 1384.0
offset_bottom = 257.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "Z"

[node name="Label19" type="Label" parent="."]
offset_left = 797.0
offset_top = 451.0
offset_right = 927.0
offset_bottom = 498.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "F"

[node name="Label20" type="Label" parent="."]
offset_left = 796.0
offset_top = 371.0
offset_right = 926.0
offset_bottom = 418.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "R"

[node name="Label21" type="Label" parent="."]
offset_left = 795.0
offset_top = 290.0
offset_right = 925.0
offset_bottom = 337.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "E"

[node name="Label22" type="Label" parent="."]
offset_left = 793.0
offset_top = 206.99998
offset_right = 923.0
offset_bottom = 253.99998
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "Q"

[node name="Label23" type="Label" parent="."]
offset_left = 325.0
offset_top = 455.0
offset_right = 455.0
offset_bottom = 502.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "D"

[node name="Label24" type="Label" parent="."]
offset_left = 326.0
offset_top = 369.0
offset_right = 456.0
offset_bottom = 416.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "A"

[node name="Label25" type="Label" parent="."]
offset_left = 327.0
offset_top = 290.0
offset_right = 457.0
offset_bottom = 337.0
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "S"

[node name="Label26" type="Label" parent="."]
offset_left = 323.0
offset_top = 208.99998
offset_right = 453.0
offset_bottom = 255.99998
theme_override_fonts/font = SubResource("FontVariation_pykmj")
theme_override_font_sizes/font_size = 29
text = "W"

[node name="VolumeSlider" type="HSlider" parent="."]
offset_left = 148.0
offset_top = 642.0
offset_right = 410.0
offset_bottom = 729.0
theme_override_styles/slider = SubResource("StyleBoxLine_pykmj")

[node name="VolumeValueLabel" type="Label" parent="."]
offset_left = 455.0
offset_top = 664.0
offset_right = 556.0
offset_bottom = 718.0
theme_override_fonts/font = SubResource("FontVariation_b0jeg")
theme_override_font_sizes/font_size = 30
text = "0 %"

[node name="click_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_b0jeg")
